update to support java 16
Signed-off-by: Raymond Auge <rotty3000@apache.org>